# vscode-py-dist-test

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
python/lsp_server/: pyproject.toml
python/lsp_server/src/: lsp_server.py
python/lsp_server/src/lsp_server/: __init__.py  __main__.py
python/tests/: test_dummy.py
scripts/: create_prod_lock.py  download_python.py
vscode/: .eslintrc.js  .gitignore  .prettierignore  .vscode-test.js  .vscodeignore  esbuild-tests.mjs  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
vscode/src/tests/: helper.ts  server.test.ts
